samples/_failures_safe/1761043504_d54f0c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_868378b9.c: In function ‘main’:
./samples/SAFE/__tmp_868378b9.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
